# feedgy-ds-energy-profile

./: .bandit  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  merge.yml  publish_dev.yml  publish_prod.yml
docs/: feedgy-ds-profile.code-profile
notebooks/: 1_pv_park_analysis.ipynb
src/feedgy_ds_repo_template/: config.yaml  main.py
src/feedgy_ds_repo_template/infra/: config_handler.py
tests/: conftest.py
tests/infra/: test_config_handler.py
